--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 	<center>
-<h1 style="color:white;">Math Game:)</h1>
+<h1 style="color:white;font-size: 50px;">Math Game:)</h1>
 <div class="col-lg-4 col-sm-8 col-xs-11 login_div1">
 <h3>Player 1 Login</h3>
 <label >User name: </label>
@@ -31,7 +31,7 @@
 	</div>
 	<br>
 	<br>
-	<button style="width:30%" class="btn btn-primary" onclick="addUser()">Login !</button>
+	<button style="width:30%;color: black;" class="btn btn-warning" onclick="addUser()" >Login !</button>
 </center>
 </body>
 </html>
